<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:fillViewport="true" >
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
        
    <TextView
        android:id="@+id/slab_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:background="@drawable/add_dialog_border"
        android:text="@string/slab"
        android:textSize="26sp" />
    
    <TextView
        android:id="@+id/wall_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:background="@drawable/add_dialog_border"
        android:text="@string/wall"
        android:textSize="26sp" />
    
    <TextView
        android:id="@+id/footing_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:background="@drawable/add_dialog_border"
        android:text="@string/footing"
        android:textSize="26sp" />
    
    <TextView
        android:id="@+id/columns_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:background="@drawable/add_dialog_border"
        android:text="@string/columns"
        android:textSize="26sp" />
    
    <TextView
        android:id="@+id/steps_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:gravity="center"
        android:background="@drawable/add_dialog_border"
        android:text="@string/steps"
        android:textSize="26sp" />
   
</LinearLayout>
</ScrollView>

